--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pipenv
-          pipenv shell
           pipenv install
           pipenv install setuptools wheel twine
-      - name: Lint
+      - name: Run linting
         run: |
           flake8 . --max-line-length=127
       - name: Run tests
