--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,16 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Generate requirements.txt from Pipfile
         run: |
           python -m pip install --upgrade pipenv
           pipenv install
-          pipenv install setuptools wheel twine
+          pipenv run pip freeze > requirements.txt
+          pip install -r requirements.txt
+          pip install setuptools wheel twine
       - name: Run linting
         run: |
-          pipenv shell
           flake8 . --max-line-length=127
       - name: Run tests
         run: |
-          pipenv shell
           python setup.py test
