--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,9 @@ jobs:
           pipenv install
           pipenv run pip freeze > requirements.txt
           pip install -r requirements.txt
-          pip install setuptools wheel twine
       - name: Run linting
         run: |
+          pip install flake8
           flake8 . --max-line-length=127
       - name: Run tests
         run: |
