--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Generate requirements.txt from Pipfile
         run: |
-          python -m pip install --upgrade pipenv
+          python -m pip install --upgrade pipenv pip
           pipenv install
           pipenv run pip freeze > requirements.txt
           pip install -r requirements.txt
