--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
           python -m pip install --upgrade pipenv pip
           pipenv install
           pipenv run pip freeze > requirements.txt
+          pip install --upgrade setuptools pyparser pyparsing cffi
           pip install -r requirements.txt
       - name: Run linting
         run: |
