--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8]
+        python-version: [3.5, 3.6, 3.7]
 
     steps:
       - uses: actions/checkout@v1
@@ -23,7 +23,6 @@ jobs:
           python -m pip install --upgrade pipenv pip
           pipenv install
           pipenv run pip freeze > requirements.txt
-          pip install --upgrade setuptools pyparser pyparsing cffi
           pip install -r requirements.txt
       - name: Run linting
         run: |
