--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,23 +8,28 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-      with:
-        ref: ${{ github.ref }}
-    - name: Set up Python
-      uses: actions/setup-python@v1
-      with:
-        python-version: '3.5'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pipenv
-        pipenv install
-        pipenv install setuptools wheel twine
-    - name: Run tests
-      run: |
-        python setup.py test
-    - name: Publish a Python distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_KEY }}
+      - uses: actions/checkout@v1
+        with:
+          ref: ${{ github.ref }}
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.5'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pipenv pip
+          pipenv install
+          pipenv run pip freeze > requirements.txt
+          pip install -r requirements.txt
+          pip install setuptools wheel twine
+      - name: Run tests
+        run: |
+          python setup.py test
+      - name: Build package
+        run: |
+          python3 setup.py sdist bdist_wheel
+      - name: Publish a Python distribution to PyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_KEY }}
