--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,10 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Set up environment for cffi
-        run: |
-          sudo apt install python-dev
       - name: Generate requirements.txt from Pipfile
         run: |
           python -m pip install --upgrade pipenv pip
-          pipenv install
+          pipenv install --dev
           pipenv run pip freeze > requirements.txt
           pip install -r requirements.txt
       - name: Run linting
