--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Generate requirements.txt from Pipfile
         run: |
-          python -m pip install --upgrade pipenv pip
-          pipenv install --dev
-          pipenv run pip freeze > requirements.txt
+          python -m pip install --upgrade pipenv_to_requirements pip
+          pipenv_to_requirements
           pip install -r requirements.txt
+          pip install -r requirements-dev.txt
       - name: Run linting
         run: |
-          pip install flake8
           flake8 . --max-line-length=127
       - name: Run tests
         run: |
